--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
     implementation "androidx.core:core-splashscreen:1.0.0-beta01"
     implementation 'androidx.annotation:annotation:1.4.0'
+    implementation "androidx.paging:paging-compose:3.3.0-alpha02"
 }
