--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,13 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.4.0'
     implementation "com.google.accompanist:accompanist-pager:0.23.1"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.23.1"
+
+
+    //Dagger Hilt
+    implementation "com.google.dagger:hilt-android:2.45"
+    implementation "com.google.dagger:hilt-compiler:2.45"
+
+    //Datastore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
 }
