fixed gradle version of Dagger hilt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt' // Add the Kotlin Kapt plugin for annotation processing
 }
 
 android {
@@ -66,8 +67,8 @@ dependencies {
 
 
     //Dagger Hilt
-    implementation "com.google.dagger:hilt-android:2.45"
-    implementation "com.google.dagger:hilt-compiler:2.45"
+    implementation "com.google.dagger:hilt-android:2.38.1" // Update Dagger Hilt version
+    kapt "com.google.dagger:hilt-compiler:2.38.1" // Apply Kotlin annotation processing for Dagger Hilt
 
     //Datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
